# ECM2434-ExeChange

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  credentials.json  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.ebextensions/: static-files.config
.github/workflows/: Linting.yml  Pytesting.yml  ci.yml  docker-ci.yml  npm-ci.yml  npm-format.yml  npm-install.yml  npm-lint.yml  npm-test.yml  python-ci.yml  python_ci.yml
.platform/nginx/conf.d/: exechange.conf
backend/: scripts.py
backend/apps/api/: admin.py  authenticate.py  authentication.py  credentials.json  emails.py  models.py  notifications.py  responses.py  route_login.py  route_marketplace.py  route_register.py  route_trading.py  route_upload.py  serializer.py  token.json  urls.py  user_authentication.py  users.py  views.py
backend/apps/api/custom_routes/: user_login.py  user_register.py
backend/apps/api/migrations/: 0001_initial.py  0001_item_upload.py  0002_alter_exechangeuser_options_and_more.py  0002_auto_20230228_1930.py  0002_clothingitem_image.py  0002_pendingtrade.py  0002_rename_name_itemtag_value.py  0002_tag_delete_tags_alter_clothingitem_tags.py  0003_clothingitem_created_at_clothingitem_updated_at.py  0003_rename_initator_pendingtrade_initiator.py  0003_rename_tag_tagmodel.py  0004_alter_clothingitem_image.py  0004_clothingitem_in_pending_trade.py  0004_merge_20230302_0939.py  0004_remove_clothingitem_tags_tagmodel_taggeditems.py  0005_merge_20230302_1125.py  0005_remove_tagmodel_taggeditems_clothingitem_tags.py  0006_achievemnt.py  0006_exechangeuser_verification_code.py  0006_location_traderequest.py  0006_notification.py  0006_rename_tagmodel_itemtag.py  0007_alter_notification_notification_type.py  0007_delete_clothingowner.py  0007_exechangeuser_is_verified.py  0007_remove_achievemnt_achiever_and_more.py  0007_rename_value_location_name.py  0008_alter_exechangeuser_verification_code.py  0008_alter_itemtag_tag.py  0008_default_locations.py  0008_rename_achievemnt_achievement.py  0009_alter_exechangeuser_verification_code.py  0009_location.py  0009_remove_traderequest_from_location_and_more.py  (+19 more)
backend/apps/api/routes/: constants.py  (+11 more)
backend/backend/: settings.py  urls.py
frontend/: App.test.tsx  App.tsx  Login.tsx  Navbar-old.tsx  Navbar.tsx  Register.tsx  apple-touch-icon.ai  favicon.ai  index.css  index.html  main.tsx  push.ts
frontend/Marketplace/: Itemtile.tsx  Marketplace.tsx
frontend/components/: Logo.tsx  Navbar.tsx  Notification.tsx  NotificationBox.tsx  TagSearch.tsx  TagSelect.tsx  Tradealert.tsx  button.tsx  calendar.css  calendar.tsx  classnames-utils.ts  index.ts  months.tsx  section-header.tsx  section.tsx  time.tsx  years.tsx
frontend/pages/: Dev.tsx  Error.tsx
frontend/pages/Authentication/: Login.tsx  Logout.tsx  Register.tsx  ResendVerify.tsx  Verify.tsx
frontend/pages/Help/: PrivacyPolicy.tsx
frontend/pages/Hero/: Hero.test.tsx  Hero.tsx
frontend/pages/Login/: Login.tsx
frontend/pages/Marketplace/: Itemtile.tsx  Marketplace.tsx  MarketplaceItem.tsx  TradingPopup.tsx  trading.tsx
frontend/pages/Profile/: Achievement.tsx  Badge.tsx  DeleteItem.tsx  Locations.tsx  MiniProfile.tsx  MyItemsProfile.tsx  Profile.tsx  Profilestats.tsx  TradeAlert.tsx  Tradealert.tsx
frontend/pages/Register/: Register.tsx
frontend/pages/Support/: PrivacyPolicy.tsx  TermsOfUse.tsx
frontend/pages/TradeCenter/: DayPick.tsx  GiverAcceptView.tsx  PendingGiverTradeView.tsx  PendingReceiverTradeView.tsx  PendingTradeView.tsx  ReceiverAcceptView.tsx  RejectedReceiverTradeView.tsx  TimeLocation.tsx  TradeAccept.tsx  TradeCenter.tsx  TradeResponse.tsx  TradeViews.tsx  Tradealerts.tsx
frontend/pages/TradeCentre/: DayPick.tsx  Error.tsx  TimeLocation.tsx  TradeAlert.tsx  TradeCentre.tsx  TradeResponse.tsx  TradeView.tsx
frontend/pages/TradeView/: RequestView.tsx  Requests.tsx  Tradealerts.tsx
frontend/pages/Upload/: TagSearch.tsx  TagSelector.tsx  Taglist.tsx  Upload.tsx  UploadPage.tsx
frontend/pages/trading/: TradeRequest.tsx
frontend/service-worker/: sw.ts  tsconfig.json
nginx/: Dockerfile  debug.conf  default.conf  production.conf
(+12 files in other folders)
